feat(fc-msa-traffic): add catalog service api v1
